src/app/globals.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: 'Jura';
  src: url('../assets/fonts/Jura-VariableFont_wght.ttf');
}

:root {
  --main-font: 'Jura';
  --text-color: rgb(0, 0, 0);
  --bg-color: rgb(235, 235, 235);
  --bg-color-transparent: rgba(170, 170, 170, 0.2);
  --light-shadow: rgb(255, 255, 255);
  --dark-shadow: rgba(0, 0, 0, 0.25);
  --accent-color: rgb(60, 60, 60);
  --weak-color: rgba(60, 60, 60, 0.5);
  --dark-color-transparent: rgba(50, 50, 50, 0.85);
}

html {
  font-size: 10px;
  scrollbar-width: thin;
  scrollbar-color: var(--weak-color) transparent;
}

html::-webkit-scrollbar,
.scrollbar::-webkit-scrollbar {
  width: 0.8rem;
  border-radius: 1rem;
  background-color: transparent;
}

html::-webkit-scrollbar-thumb,
.scrollbar::-webkit-scrollbar-thumb {
  background-color: var(--weak-color);
  border-radius: 1rem;
}

.scrollbar {
  scrollbar-width: thin;
  scrollbar-color: var(--dark-color-transparent) transparent;
}

body {
  opacity: 0;
  animation: appear 1s forwards;
  background-color: var(--bg-color);
}

p,
span,
a,
li,
h1,
h2,
h3,
button,
select {
  font-family: var(--main-font);
  font-size: 1.8rem;
  color: var(--text-color);
}

h1 {
  text-align: center;
  font-size: 4rem;
}

h2 {
  text-align: center;
  font-size: 3rem;
}

h3 {
  text-align: center;
  font-size: 2.6rem;
}

ul,
ol {
  list-style: none;
}

.invert {
  filter: var(--invert);
}

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100dvh;
  margin: 0 auto;
}

.main {
  display: flex;
  flex-direction: column;
  gap: 5rem;
  width: 100%;
  max-width: 1440px;
  margin-top: 4rem;
  padding: 0 2rem 2rem 2rem;
}

.main > * {
  opacity: 0;
  animation: appear 1s forwards;
}

.line {
  z-index: -1;
  position: absolute;
  top: 0;
  left: 50%;
  overflow-y: hidden;
  width: 0.1rem;
  height: 100%;
  filter: blur(0.4rem);
}

.line::after {
  content: '';
  position: absolute;
  top: -50%;
  left: 0;
  height: 20vh;
  width: 100%;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, var(--accent-color) 75%, var(--accent-color) 100%);
  animation: drop 6.5s 0s infinite forwards linear;
}

.line:nth-child(1) {
  margin-left: -33.5%;
}

.line:nth-child(1)::after {
  animation-delay: 2.5s;
}

.line:nth-child(3) {
  margin-left: 33.5%;
}

.line:nth-child(3)::after {
  animation-delay: 4.5s;
}

@keyframes drop {
  from {
    top: -30%;
  }
  to {
    top: 100%;
  }
}

@keyframes appear {
  to {
    opacity: 1;
  }
}

